Fix : bug with book state if added by form

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div class="form__group" required>
                     <label for="form__statut">Statut</label>
                     <select id="form__statut" name="statut" class="form__input">
-                        <option value="to-read">À lire</option>
-                        <option value="read">Déjà lu</option>
+                        <option value="false">À lire</option>
+                        <option value="true">Déjà lu</option>
                     </select>
                 </div>
     
